fix fide in on mobile.

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -660,6 +660,12 @@ button {
     margin: 0 0 1rem 0;
   }
 
+  .story.active {
+    opacity: 1;
+    -webkit-transform: skewX(0deg) translate(0%) scale(1);
+    transform: skewX(0deg) translate(0%) scale(1);
+  }
+
   .container {
     flex-direction: column-reverse;
   }
